
AM_CPPFLAGS= -I$(top_srcdir)/include -DGMXLIBDIR=\"$(datadir)/top\"

noinst_LTLIBRARIES = libpf_nb_kernel_c.la

libpf_nb_kernel_c_la_SOURCES = \
	pf_nb_kernel010.c pf_nb_kernel020.c pf_nb_kernel030.c pf_nb_kernel100.c \
	pf_nb_kernel101.c pf_nb_kernel102.c pf_nb_kernel103.c pf_nb_kernel104.c \
	pf_nb_kernel110.c pf_nb_kernel111.c pf_nb_kernel112.c pf_nb_kernel113.c \
	pf_nb_kernel114.c pf_nb_kernel120.c pf_nb_kernel121.c pf_nb_kernel122.c \
	pf_nb_kernel123.c pf_nb_kernel124.c pf_nb_kernel130.c pf_nb_kernel131.c \
	pf_nb_kernel132.c pf_nb_kernel133.c pf_nb_kernel134.c pf_nb_kernel200.c \
	pf_nb_kernel201.c pf_nb_kernel202.c pf_nb_kernel203.c pf_nb_kernel204.c \
	pf_nb_kernel210.c pf_nb_kernel211.c pf_nb_kernel212.c pf_nb_kernel213.c \
	pf_nb_kernel214.c pf_nb_kernel220.c pf_nb_kernel221.c pf_nb_kernel222.c \
	pf_nb_kernel223.c pf_nb_kernel224.c pf_nb_kernel230.c pf_nb_kernel231.c \
	pf_nb_kernel232.c pf_nb_kernel233.c pf_nb_kernel234.c pf_nb_kernel300.c \
	pf_nb_kernel301.c pf_nb_kernel302.c pf_nb_kernel303.c pf_nb_kernel304.c \
	pf_nb_kernel310.c pf_nb_kernel311.c pf_nb_kernel312.c pf_nb_kernel313.c \
	pf_nb_kernel314.c pf_nb_kernel320.c pf_nb_kernel321.c pf_nb_kernel322.c \
	pf_nb_kernel323.c pf_nb_kernel324.c pf_nb_kernel330.c pf_nb_kernel331.c \
	pf_nb_kernel332.c pf_nb_kernel333.c pf_nb_kernel334.c pf_nb_kernel400.c \
	pf_nb_kernel410.c pf_nb_kernel420.c pf_nb_kernel430.c                \
	pf_nb_kernel_allvsall.c          pf_nb_kernel_allvsallgb.c        \
	pf_nb_kernel010.h pf_nb_kernel020.h pf_nb_kernel030.h pf_nb_kernel100.h \
	pf_nb_kernel101.h pf_nb_kernel102.h pf_nb_kernel103.h pf_nb_kernel104.h \
	pf_nb_kernel110.h pf_nb_kernel111.h pf_nb_kernel112.h pf_nb_kernel113.h \
	pf_nb_kernel114.h pf_nb_kernel120.h pf_nb_kernel121.h pf_nb_kernel122.h \
	pf_nb_kernel123.h pf_nb_kernel124.h pf_nb_kernel130.h pf_nb_kernel131.h \
	pf_nb_kernel132.h pf_nb_kernel133.h pf_nb_kernel134.h pf_nb_kernel200.h \
	pf_nb_kernel201.h pf_nb_kernel202.h pf_nb_kernel203.h pf_nb_kernel204.h \
	pf_nb_kernel210.h pf_nb_kernel211.h pf_nb_kernel212.h pf_nb_kernel213.h \
	pf_nb_kernel214.h pf_nb_kernel220.h pf_nb_kernel221.h pf_nb_kernel222.h \
	pf_nb_kernel223.h pf_nb_kernel224.h pf_nb_kernel230.h pf_nb_kernel231.h \
	pf_nb_kernel232.h pf_nb_kernel233.h pf_nb_kernel234.h pf_nb_kernel300.h \
	pf_nb_kernel301.h pf_nb_kernel302.h pf_nb_kernel303.h pf_nb_kernel304.h \
	pf_nb_kernel310.h pf_nb_kernel311.h pf_nb_kernel312.h pf_nb_kernel313.h \
	pf_nb_kernel314.h pf_nb_kernel320.h pf_nb_kernel321.h pf_nb_kernel322.h \
	pf_nb_kernel323.h pf_nb_kernel324.h pf_nb_kernel330.h pf_nb_kernel331.h \
	pf_nb_kernel332.h pf_nb_kernel333.h pf_nb_kernel334.h pf_nb_kernel400.h \
	pf_nb_kernel410.h pf_nb_kernel420.h pf_nb_kernel430.h                \
	pf_nb_kernel_allvsall.h	      pf_nb_kernel_allvsallgb.h	    \
	pf_nb_kernel_c.c    pf_nb_kernel_c.h



